--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-    font-family:'Open Sans', serif;
+    font-family:'Newsreader', serif;
     line-height: 1.6;
     color: #333;
         padding-top: 80px;
